convert the headline object to an title component

--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
         <section class="o-grid c-teaser qa-teaser">
           <div class="o-grid__item u-width-12 u-width-4@m" id="foo">
             <div class="c-teaser__item">
-              <h2 class="o-headline o-island c-teaser__title">Foo</h2>
+              <h2 class="o-island c-title c-teaser__title">Foo</h2>
               <img src="http://placehold.it/350x300" alt="Foo">
               <div class="o-island">
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
@@ -48,7 +48,7 @@
           </div>
           <div class="o-grid__item u-width-12 u-width-4@m" id="bar">
             <div class="c-teaser__item">
-              <h2 class="o-headline o-island c-teaser__title">Bar</h2>
+              <h2 class="o-island c-title c-teaser__title">Bar</h2>
               <img src="http://placehold.it/350x300" alt="Foo">
               <div class="o-island">
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
@@ -57,7 +57,7 @@
           </div>
           <div class="o-grid__item u-width-12 u-width-4@m" id="baz">
             <div class="c-teaser__item">
-              <h2 class="o-headline o-island c-teaser__title">Baz</h2>
+              <h2 class="o-island c-title c-teaser__title">Baz</h2>
               <img src="http://placehold.it/350x300" alt="Foo">
               <div class="o-island">
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
@@ -70,11 +70,11 @@
         <div class="o-container o-spacing">
           <div class="o-grid">
             <div class="o-spacing o-grid__item u-width-12 u-width-6@m">
-              <h3 class="o-headline">Hello</h3>
+              <h3 class="c-title">Hello</h3>
               <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
             </div>
             <div class="o-spacing o-grid__item u-width-12 u-width-6@m">
-              <h3 class="o-headline">World</h3>
+              <h3 class="c-title">World</h3>
               <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
             </div>
           </div>
